[gd_scene load_steps=49 format=3 uid="uid://c4uv3cur76h0r"]

[ext_resource type="Script" path="res://Level/level.gd" id="1_b3drq"]
[ext_resource type="Texture2D" uid="uid://du8i3i0ukc661" path="res://Texture/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Background/Background.png" id="3_ohnlv"]
[ext_resource type="PackedScene" uid="uid://cc8wav40o0jst" path="res://Player/player.tscn" id="4_gwfel"]
[ext_resource type="Texture2D" uid="uid://byy04pvr4scqt" path="res://Texture/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Assets/Buildings.png" id="5_6c535"]
[ext_resource type="PackedScene" uid="uid://downiljy7e3de" path="res://Level/wasp.tscn" id="6_8coam"]
[ext_resource type="PackedScene" uid="uid://rys8xlye1qtb" path="res://Level/wasp_bullet.tscn" id="7_qj5o3"]
[ext_resource type="Script" path="res://Level/Portal.gd" id="8_cvmg7"]
[ext_resource type="PackedScene" uid="uid://dqa8dunult8et" path="res://Player/character_body_2d.tscn" id="8_f5iit"]
[ext_resource type="PackedScene" uid="uid://lcsekr67212l" path="res://Player/fireball.tscn" id="9_k5on2"]
[ext_resource type="Texture2D" uid="uid://1dvnm47r2ffl" path="res://Level/Heart&ManaUi.png" id="10_4o4ir"]
[ext_resource type="Texture2D" uid="uid://cqmyflbm0teeu" path="res://Level/Heart&ManaUi - Copy.png" id="11_e78n8"]
[ext_resource type="Texture2D" uid="uid://v5mykjb4fre" path="res://Level/Heart&ManaUi - OG.png" id="12_f47qs"]
[ext_resource type="Texture2D" uid="uid://dvujqe6lwv5gj" path="res://Level/Heart&ManaUi - OG (2).png" id="12_jns3m"]
[ext_resource type="PackedScene" uid="uid://bpv2alj17upsr" path="res://Player/player pos.tscn" id="12_pqfdy"]
[ext_resource type="Texture2D" uid="uid://dxig7xrls18xd" path="res://Level/Heart&ManaUi - OG (3).png" id="13_fu6d8"]
[ext_resource type="PackedScene" uid="uid://dvjbebngw85kw" path="res://Player/bluefb.tscn" id="16_srcmn"]
[ext_resource type="Texture2D" uid="uid://dgg6kfvyygh00" path="res://Level/Heart&ManaUi - OG - Copy.png" id="17_7mx54"]
[ext_resource type="PackedScene" uid="uid://c10s7ubsnvhxb" path="res://Player/inventory.tscn" id="17_dkfrv"]
[ext_resource type="Texture2D" uid="uid://c4torlnaroiip" path="res://Level/Heart&ManaUi - OG (3) - Copy.png" id="17_ocfq2"]
[ext_resource type="Texture2D" uid="uid://cy55et44rprmk" path="res://Texture/stats.png" id="18_8kkmx"]
[ext_resource type="FontFile" uid="uid://dbaxarhle1rqc" path="res://Daydream.ttf" id="19_5auy0"]
[ext_resource type="Texture2D" uid="uid://bpaykf31on7n8" path="res://Texture/plus1.png" id="19_h8tmo"]
[ext_resource type="FontFile" uid="uid://swd8qfo05kdj" path="res://StayPixelRegular-EaOxl.ttf" id="20_83cpf"]
[ext_resource type="Texture2D" uid="uid://c0flfs1e5tqbs" path="res://Texture/plus.png" id="20_mc0hp"]
[ext_resource type="FontFile" uid="uid://c8c74lsfpxju3" path="res://Pixeboy-z8XGD.ttf" id="21_j0wkq"]
[ext_resource type="PackedScene" uid="uid://c4l8dmuyh0g4o" path="res://Level/b_boar.tscn" id="22_jrwf8"]
[ext_resource type="Texture2D" uid="uid://5t7byhdf6u70" path="res://Texture/lvl2.png" id="26_vu545"]
[ext_resource type="Texture2D" uid="uid://ym2pkip0v8il" path="res://Texture/bg.png" id="27_louvs"]
[ext_resource type="Texture2D" uid="uid://dp8v8ghq5m86b" path="res://Texture/grass.png" id="27_obps1"]
[ext_resource type="Texture2D" uid="uid://cn3tprott0bha" path="res://Level/Sprite-0001.png" id="27_u7dqk"]
[ext_resource type="Texture2D" uid="uid://4kkl3ir64di5" path="res://Texture/block.png" id="29_iishn"]
[ext_resource type="Texture2D" uid="uid://d3qsmfmn223d5" path="res://Texture/border.png" id="30_o3ka3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qtydr"]
size = Vector2(82, 69)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_07sah"]
texture = ExtResource("27_u7dqk")

[sub_resource type="Animation" id="Animation_yme7x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w3dtl"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iy5bj"]
_data = {
"RESET": SubResource("Animation_yme7x"),
"new_animation": SubResource("Animation_w3dtl")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rvqje"]
texture = ExtResource("18_8kkmx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xynwh"]
texture = ExtResource("20_mc0hp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r08lm"]
texture = ExtResource("20_mc0hp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_urdx4"]
texture = ExtResource("20_mc0hp")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lfl1o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hrmdn"]
texture = ExtResource("19_h8tmo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kg2ch"]
texture = ExtResource("19_h8tmo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ewroe"]
texture = ExtResource("19_h8tmo")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nkrdy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lren1"]
size = Vector2(512.603, 86.6313)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sksy0"]

[node name="Level" type="Node2D"]
script = ExtResource("1_b3drq")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="Sky" type="Node2D" parent="."]

[node name="B" type="Sprite2D" parent="Sky"]
z_index = -14
position = Vector2(683.527, 372.5)
scale = Vector2(2.86199, 2.68014)
texture = ExtResource("3_ohnlv")

[node name="B2" type="Sprite2D" parent="Sky"]
z_index = -14
position = Vector2(1840, 371.5)
scale = Vector2(2.86199, 2.68014)
texture = ExtResource("3_ohnlv")

[node name="B3" type="Sprite2D" parent="Sky"]
z_index = -14
position = Vector2(3208, 371.5)
scale = Vector2(2.86199, 2.68014)
texture = ExtResource("3_ohnlv")

[node name="B4" type="Sprite2D" parent="Sky"]
z_index = -14
position = Vector2(688, 904)
scale = Vector2(2.86199, 2.68014)
texture = ExtResource("3_ohnlv")
region_enabled = true
region_rect = Rect2(0, 138, 480, 134)

[node name="B5" type="Sprite2D" parent="Sky"]
z_index = -14
position = Vector2(2056, 904)
scale = Vector2(2.86199, 2.68014)
texture = ExtResource("3_ohnlv")
region_enabled = true
region_rect = Rect2(0, 138, 480, 134)

[node name="B6" type="Sprite2D" parent="Sky"]
z_index = -14
position = Vector2(3208, 904)
scale = Vector2(2.86199, 2.68014)
texture = ExtResource("3_ohnlv")
region_enabled = true
region_rect = Rect2(0, 138, 480, 134)

[node name="Portal" type="StaticBody2D" parent="."]
visible = false
position = Vector2(-2064.51, -436)
scale = Vector2(1, 0.999443)
collision_layer = 2
collision_mask = 23
script = ExtResource("8_cvmg7")

[node name="Sprite2D" type="Sprite2D" parent="Portal"]
z_index = -4
position = Vector2(4111, 1058)
texture = ExtResource("5_6c535")
region_enabled = true
region_rect = Rect2(271, 208, 129, 159)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Portal"]
polygon = PackedVector2Array(4070, 1023, 4098, 1002, 4127, 980, 4175, 979, 4175, 1038, 4175, 1110, 4146, 1107, 4147, 1039, 4071, 1037)
disabled = true

[node name="Area2D" type="Area2D" parent="Portal"]
collision_layer = 8
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal/Area2D"]
position = Vector2(4105, 1071.5)
shape = SubResource("RectangleShape2D_qtydr")

[node name="Fireballs" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("4_gwfel")]
position = Vector2(264, 703)
collision_mask = 30

[node name="GPUParticles2D" parent="Player" index="1"]
z_index = -2

[node name="Timer5" parent="Player" index="13"]
autostart = true

[node name="RemoteTransform2D2" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(264, 703)
zoom = Vector2(3.196, 3.196)
process_callback = 0
limit_left = 0
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="wasps" type="Node2D" parent="."]
scale = Vector2(0.6, 0.6)

[node name="wasp" parent="wasps" instance=ExtResource("6_8coam")]
position = Vector2(675, 1071.67)

[node name="wasp2" parent="wasps" instance=ExtResource("6_8coam")]
position = Vector2(128.333, 1113.33)

[node name="bullet" parent="wasps" instance=ExtResource("7_qj5o3")]
position = Vector2(68.3333, 605)

[node name="Fireball" parent="." instance=ExtResource("9_k5on2")]

[node name="GPUParticles2D" parent="Fireball" index="0"]
visible = false

[node name="fireball" parent="Fireball" index="2"]
frame_progress = 1.0

[node name="CharacterBody2D" parent="." instance=ExtResource("8_f5iit")]
position = Vector2(2205.31, 514.463)
collision_mask = 39

[node name="CharacterBody2D2" parent="." instance=ExtResource("8_f5iit")]
position = Vector2(604, 615)
collision_mask = 39

[node name="CharacterBody2D3" parent="." instance=ExtResource("8_f5iit")]
position = Vector2(677, 585)
collision_mask = 39

[node name="CharacterBody2D4" parent="." instance=ExtResource("8_f5iit")]
position = Vector2(860, 599)
collision_mask = 39

[node name="CharacterBody2D5" parent="." instance=ExtResource("8_f5iit")]
position = Vector2(1377, 574)
collision_mask = 39

[node name="Baor" type="Node2D" parent="."]
position = Vector2(85, 0)

[node name="Node2D" parent="." instance=ExtResource("12_pqfdy")]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="bluefb" parent="." instance=ExtResource("16_srcmn")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_top = 842.0
offset_right = 1683.0
offset_bottom = 1075.0
scale = Vector2(1.03854, 1.03854)
theme_override_styles/panel = SubResource("StyleBoxTexture_07sah")

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.00374996
anchor_top = 0.010296
anchor_right = 0.385063
anchor_bottom = 0.119813
offset_left = 34.1858
offset_top = 935.153
offset_right = -466.915
offset_bottom = 865.058
grow_horizontal = 0
scale = Vector2(5.21351, 5.28401)
max_value = 10.0
value = 10.0
texture_under = ExtResource("10_4o4ir")
texture_progress = ExtResource("11_e78n8")
metadata/_edit_use_anchors_ = true

[node name="TextureProgressBar2" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -2.7523e-05
anchor_top = 0.0226445
anchor_right = 0.381286
anchor_bottom = 0.102957
offset_left = 1119.91
offset_top = 923.618
offset_right = 618.809
offset_bottom = 872.215
grow_horizontal = 0
scale = Vector2(5.47188, 5.54589)
value = 100.0
texture_under = ExtResource("12_f47qs")
texture_over = ExtResource("12_jns3m")
texture_progress = ExtResource("13_fu6d8")
metadata/_edit_use_anchors_ = true

[node name="TextureProgressBar3" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -2.7523e-05
anchor_top = 0.0226445
anchor_right = 0.381286
anchor_bottom = 0.102957
offset_left = 616.446
offset_top = 12.0757
offset_right = 106.344
offset_bottom = -39.3271
grow_horizontal = 0
scale = Vector2(5.47427, 5.54831)
value = 100.0
texture_under = ExtResource("17_7mx54")
texture_progress = ExtResource("17_ocfq2")

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
position = Vector2(-7.06228, 165.21)
scale = Vector2(5.59726, 5.67296)

[node name="AnimationTree" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_iy5bj")
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.954
offset_left = 973.42
offset_top = 937.495
offset_right = -238.58
offset_bottom = 991.777
scale = Vector2(0.10793, 0.0811999)
theme_override_colors/font_color = Color(0.929412, 0.74902, 0.290196, 1)
theme_override_fonts/font = ExtResource("19_5auy0")
theme_override_font_sizes/font_size = 591
text = "1"

[node name="Label3" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.954
offset_left = 864.986
offset_top = 83.7298
offset_right = -347.014
offset_bottom = 138.012
scale = Vector2(0.100479, 0.0755942)
theme_override_colors/font_color = Color(0.054902, 0.905882, 0.705882, 1)
theme_override_fonts/font = ExtResource("19_5auy0")
theme_override_font_sizes/font_size = 591
text = "1"

[node name="Label2" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.954
offset_left = 724.78
offset_top = 937.495
offset_right = 436.78
offset_bottom = 688.777
scale = Vector2(0.187433, 0.141013)
theme_override_colors/font_color = Color(0.929412, 0.74902, 0.290196, 1)
theme_override_fonts/font = ExtResource("20_83cpf")
theme_override_font_sizes/font_size = 591
text = "LEVEL:"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchor_left = 0.269
anchor_top = 0.051
anchor_right = 0.859
anchor_bottom = 1.329
offset_left = -430.4
offset_top = -39.627
offset_right = -1334.4
offset_bottom = -992.633

[node name="Panel" parent="CanvasLayer2/Control" instance=ExtResource("17_dkfrv")]
layout_mode = 0
offset_left = 403.761
offset_top = -90.2327
offset_right = 744.761
offset_bottom = 250.767
scale = Vector2(2.98317, 2.98317)

[node name="Panel2" parent="CanvasLayer2/Control" instance=ExtResource("17_dkfrv")]
layout_mode = 0
offset_left = 403.761
offset_top = 35.8232
offset_right = 744.761
offset_bottom = 376.823
scale = Vector2(2.98317, 2.98317)
theme_override_styles/panel = SubResource("StyleBoxTexture_rvqje")

[node name="Label2" type="Label" parent="CanvasLayer2/Control/Panel2"]
layout_mode = 0
offset_left = 212.986
offset_top = 162.253
offset_right = 433.986
offset_bottom = 607.253
scale = Vector2(0.0571148, 0.0571148)
theme_override_fonts/font = ExtResource("19_5auy0")
theme_override_font_sizes/font_size = 336
text = "1"

[node name="Label3" type="Label" parent="CanvasLayer2/Control/Panel2"]
layout_mode = 0
offset_left = 123.223
offset_top = 164.02
offset_right = 1071.22
offset_bottom = 437.02
scale = Vector2(0.0895875, 0.0895875)
theme_override_fonts/font = ExtResource("20_83cpf")
theme_override_font_sizes/font_size = 336
text = "Points:"

[node name="Control" type="Control" parent="CanvasLayer2/Control/Panel2"]
layout_mode = 1
anchor_left = 0.059
anchor_top = 0.677
anchor_right = 0.912
anchor_bottom = 0.731
offset_left = -20.119
offset_top = -230.857
offset_right = -270.992
offset_bottom = -209.271

[node name="Button" type="Button" parent="CanvasLayer2/Control/Panel2/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0377575
anchor_top = 0.743164
anchor_right = 0.387243
anchor_bottom = 1.16816
offset_left = 107.981
offset_top = 202.663
offset_right = 107.981
offset_bottom = 202.663
theme_override_styles/normal = SubResource("StyleBoxTexture_xynwh")
theme_override_styles/hover = SubResource("StyleBoxTexture_r08lm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_urdx4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lfl1o")
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="CanvasLayer2/Control/Panel2/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.16245
anchor_top = 0.743164
anchor_right = 4.58745
anchor_bottom = 1.16816
offset_left = 107.981
offset_top = 202.663
offset_right = 107.981
offset_bottom = 202.663
theme_override_styles/normal = SubResource("StyleBoxTexture_hrmdn")
theme_override_styles/hover = SubResource("StyleBoxTexture_kg2ch")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ewroe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nkrdy")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer2/Control/Panel2/Control"]
layout_mode = 0
offset_left = 188.384
offset_top = 232.341
offset_right = 345.384
offset_bottom = 426.341
scale = Vector2(0.0895875, 0.0895875)
theme_override_fonts/font = ExtResource("21_j0wkq")
theme_override_font_sizes/font_size = 336
text = "1"

[node name="Control2" type="Control" parent="CanvasLayer2/Control/Panel2"]
layout_mode = 1
anchor_left = 0.059
anchor_top = 0.677
anchor_right = 0.912
anchor_bottom = 0.731
offset_left = -20.119
offset_top = -196.293
offset_right = -270.992
offset_bottom = -174.707

[node name="Button3" type="Button" parent="CanvasLayer2/Control/Panel2/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0377575
anchor_top = 0.743164
anchor_right = 0.387243
anchor_bottom = 1.16816
offset_left = 107.981
offset_top = 202.663
offset_right = 107.981
offset_bottom = 202.663
theme_override_styles/normal = SubResource("StyleBoxTexture_xynwh")
theme_override_styles/hover = SubResource("StyleBoxTexture_r08lm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_urdx4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lfl1o")
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="CanvasLayer2/Control/Panel2/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.16245
anchor_top = 0.743164
anchor_right = 4.58745
anchor_bottom = 1.16816
offset_left = 107.981
offset_top = 202.663
offset_right = 107.981
offset_bottom = 202.663
theme_override_styles/normal = SubResource("StyleBoxTexture_hrmdn")
theme_override_styles/hover = SubResource("StyleBoxTexture_kg2ch")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ewroe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nkrdy")
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer2/Control/Panel2/Control2"]
layout_mode = 0
offset_left = 188.384
offset_top = 232.341
offset_right = 345.384
offset_bottom = 426.341
scale = Vector2(0.0895875, 0.0895875)
theme_override_fonts/font = ExtResource("21_j0wkq")
theme_override_font_sizes/font_size = 336
text = "100"

[node name="Control3" type="Control" parent="CanvasLayer2/Control/Panel2"]
layout_mode = 1
anchor_left = 0.059
anchor_top = 0.677
anchor_right = 0.912
anchor_bottom = 0.731
offset_left = -20.119
offset_top = -163.063
offset_right = -270.992
offset_bottom = -141.477

[node name="Button5" type="Button" parent="CanvasLayer2/Control/Panel2/Control3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0377575
anchor_top = 0.743164
anchor_right = 0.387243
anchor_bottom = 1.16816
offset_left = 107.981
offset_top = 202.663
offset_right = 107.981
offset_bottom = 202.663
theme_override_styles/normal = SubResource("StyleBoxTexture_xynwh")
theme_override_styles/hover = SubResource("StyleBoxTexture_r08lm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_urdx4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lfl1o")
metadata/_edit_use_anchors_ = true

[node name="Button6" type="Button" parent="CanvasLayer2/Control/Panel2/Control3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.16245
anchor_top = 0.743164
anchor_right = 4.58745
anchor_bottom = 1.16816
offset_left = 107.981
offset_top = 202.663
offset_right = 107.981
offset_bottom = 202.663
theme_override_styles/normal = SubResource("StyleBoxTexture_hrmdn")
theme_override_styles/hover = SubResource("StyleBoxTexture_kg2ch")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ewroe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nkrdy")
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="CanvasLayer2/Control/Panel2/Control3"]
layout_mode = 0
offset_left = 188.384
offset_top = 232.341
offset_right = 345.384
offset_bottom = 426.341
scale = Vector2(0.0895875, 0.0895875)
theme_override_fonts/font = ExtResource("21_j0wkq")
theme_override_font_sizes/font_size = 336
text = "10"

[node name="Boar" parent="." instance=ExtResource("22_jrwf8")]
position = Vector2(1172, 529)
scale = Vector2(1.99092, 1.99092)
collision_mask = 39

[node name="Boar2" parent="." instance=ExtResource("22_jrwf8")]
position = Vector2(1988.46, 569.855)
scale = Vector2(1.97534, 1.97534)
collision_mask = 39
safe_margin = 0.39

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 17

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
visible = false
position = Vector2(1228, 458)
scale = Vector2(1.48, 1.48)
texture = ExtResource("26_vu545")

[node name="Bg" type="Sprite2D" parent="StaticBody2D"]
z_index = -1
position = Vector2(1228, 458)
scale = Vector2(1.48, 1.48)
texture = ExtResource("27_louvs")

[node name="grass" type="Sprite2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(1228, 458)
scale = Vector2(1.48, 1.48)
texture = ExtResource("27_obps1")

[node name="block" type="Sprite2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(1228, 458)
scale = Vector2(1.48, 1.48)
texture = ExtResource("29_iishn")

[node name="border" type="Sprite2D" parent="StaticBody2D"]
z_index = 2
position = Vector2(1228, 458)
scale = Vector2(1.48, 1.48)
texture = ExtResource("30_o3ka3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(40, 58, 46, 769, 157, 770, 166, 770, 166, 725, 353, 725, 360, 725, 360, 678, 439, 678, 439, 861, 494, 861, 500, 861, 500, 680, 764, 679, 771, 685, 773, 864, 1635, 862, 1636, 634, 2417, 630, 2429, 629, 2426, 47, 2459, 569, 2459, 911, 42, 910, 43.8687, 779.191)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(801, 631, 901, 631, 909, 632, 912, 642, 913, 679, 908, 684, 899, 686, 790, 686, 785, 679, 782, 651)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(165, -24)
polygon = PackedVector2Array(801, 631, 901, 631, 909, 632, 912, 642, 913, 679, 908, 684, 899, 686, 790, 686, 785, 679, 782, 651)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(331, -45)
polygon = PackedVector2Array(801, 631, 901, 631, 909, 632, 912, 642, 913, 679, 908, 684, 899, 686, 790, 686, 785, 679, 782, 651)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(523, -21)
polygon = PackedVector2Array(801, 631, 901, 631, 909, 632, 912, 642, 913, 679, 908, 684, 899, 686, 790, 686, 785, 679, 782, 651)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(685, -46)
polygon = PackedVector2Array(801, 631, 901, 631, 909, 632, 912, 642, 913, 679, 908, 684, 899, 686, 790, 686, 785, 679, 782, 651)

[node name="Area2D" type="Area2D" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Area2D"]
position = Vector2(989.444, 906.784)
scale = Vector2(2.84258, 1.10316)
shape = SubResource("RectangleShape2D_lren1")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D13" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(503.247, 656.304)
rotation = -1.56917
shape = SubResource("RectangleShape2D_sksy0")

[node name="spw1" type="Marker2D" parent="."]
position = Vector2(2384, 474)

[node name="spw2" type="Marker2D" parent="."]
position = Vector2(1687, 499)

[connection signal="hurt" from="." to="Player" method="_on_level_hurt"]
[connection signal="body_entered" from="Portal/Area2D" to="Portal" method="_on_area_2d_body_entered"]
[connection signal="bluefb" from="Player" to="." method="_on_player_bluefb"]
[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="fireball" from="Player" to="." method="_on_player_fireball"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_timer_timeout"]
[connection signal="player_hurt" from="CharacterBody2D" to="." method="_on_character_body_2d_player_hurt"]
[connection signal="player_hurt" from="CharacterBody2D2" to="." method="_on_character_body_2d_player_hurt"]
[connection signal="player_hurt" from="CharacterBody2D3" to="." method="_on_character_body_2d_player_hurt"]
[connection signal="player_hurt" from="CharacterBody2D4" to="." method="_on_character_body_2d_player_hurt"]
[connection signal="player_hurt" from="CharacterBody2D5" to="." method="_on_character_body_2d_player_hurt"]
[connection signal="pressed" from="CanvasLayer2/Control/Panel2/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/Control/Panel2/Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer2/Control/Panel2/Control2/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer2/Control/Panel2/Control2/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer2/Control/Panel2/Control3/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="CanvasLayer2/Control/Panel2/Control3/Button6" to="." method="_on_button_6_pressed"]
[connection signal="player_hurt1" from="Boar" to="." method="_on_boar_player_hurt_1"]
[connection signal="player_hurt1" from="Boar2" to="." method="_on_boar_player_hurt_1"]
[connection signal="body_entered" from="StaticBody2D/Area2D" to="Player" method="_on_area_2d_body_entered"]

[editable path="Player"]
[editable path="wasps/wasp"]
[editable path="wasps/wasp2"]
[editable path="Fireball"]
[editable path="bluefb"]
